Altar - beginnings + fixing navmesh and ghost collision

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://scenes/world.tscn", "res://scenes/ghost-scythe.tscn", "res://scenes/ghost.tscn", "res://scenes/damage_number.tscn", "res://scenes/torch.tscn", "res://scenes/player-new.tscn", "res://scenes/inventory.tscn", "res://scenes/altar.tscn", "res://scenes/bush.tscn", "res://scenes/ghost_pathfinding.tscn"]
+open_scenes=["res://scenes/world.tscn", "res://scenes/ghost-scythe.tscn", "res://scenes/ghost.tscn", "res://scenes/damage_number.tscn", "res://scenes/torch.tscn", "res://scenes/player-new.tscn", "res://scenes/inventory.tscn", "res://scenes/altar.tscn", "res://scenes/bush.tscn", "res://scenes/ghost_pathfinding.tscn", "res://scenes/trajectory_projectile.tscn", "res://scenes/interaction_box.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/altar.gd", "res://scripts/BoundaryGenerator.gd", "res://scripts/bush.gd", "res://scripts/cobweb_sprite.gd", "res://scenes/damage_number.gd", "res://scripts/damage_number_component.gd", "res://scripts/EnemyAI.gd", "res://scripts/ghost.gd", "res://scripts/global.gd", "res://scripts/health_manager.gd", "res://scripts/hud.gd", "res://scripts/interactable.gd", "res://scripts/inventory.gd", "res://scripts/inventory_item.gd", "res://scripts/inventory_notch.gd", "res://scripts/inventory_window.gd", "res://scripts/pathfinding_enemy_ai.gd", "res://scripts/player.gd", "res://addons/rmsmartshape/shapes/shape_closed.gd", "res://scripts/SimpleEnemyAI.gd", "res://scripts/trajectory.gd", "res://scripts/trajectory_projectile.gd", "res://scripts/trajectory_projectile_manager.gd", "res://scripts/tree.gd", "res://scripts/web_projectile.gd"]
+open_scripts=["res://scenes/altar.gd", "res://scripts/BoundaryGenerator.gd", "res://scripts/bush.gd", "res://scripts/cobweb_sprite.gd", "res://scenes/damage_number.gd", "res://scripts/damage_number_component.gd", "res://scripts/EnemyAI.gd", "res://scripts/ghost.gd", "res://scripts/global.gd", "res://scripts/health_manager.gd", "res://scripts/hud.gd", "res://scripts/interactable.gd", "res://scenes/interaction_box.gd", "res://scripts/inventory.gd", "res://scripts/inventory_item.gd", "res://scripts/inventory_notch.gd", "res://scripts/inventory_window.gd", "res://scripts/pathfinding_enemy_ai.gd", "res://scripts/player.gd", "res://addons/rmsmartshape/shapes/shape_closed.gd", "res://scripts/SimpleEnemyAI.gd", "res://scripts/trajectory.gd", "res://scripts/trajectory_projectile.gd", "res://scripts/trajectory_projectile_manager.gd", "res://scripts/tree.gd", "res://scripts/web_projectile.gd"]
 open_help=["@GlobalScope", "CanvasItem", "CollisionObject2D", "Node2D", "Polygon2D", "Timer", "Vector2"]
 script_split_offset=150
 list_split_offset=0
