--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -47,6 +47,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://scripts/interactable.gd"
 }, {
+"base": &"Node2D",
+"class": &"InteractionBox",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scenes/interaction_box.gd"
+}, {
 "base": &"Control",
 "class": &"Inventory",
 "icon": "",
